# python-clargs

./: .pylintrc  pyproject.toml  usage.py
clargs/: __init__.py  clargs.py
clargs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_clargs.py
