[tool.poetry]
name = "clargs"
version = "0.1.0"
description = "Parse command line arguments by defining a class."
authors = ["William Ferreira <wqferr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
